--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -40,6 +40,7 @@ table.examples td {
 table.imgtable td {
   padding-left: 10px;
   padding-right: 10px;
+  text-align: center;
 }
 
 td.example-img {
